<resources>
    <string name="app_name">PokemonTracker</string>
    <string name="unk">Unk</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="defence">Defence</string>
    <string name="attack">Attack</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="_800_0_kg">800.0 kg</string>
    <string name="_2_2_m">2.2 m</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="wild_horse_pokemon">Wild Horse Pokemon</string>
    <string name="glastrier">Glastrier</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="register_new_catch">Register New Catch</string>
    <string name="national_number">National Number</string>
    <string name="_896">896</string>
    <string name="weight">Weight</string>
    <string name="base_stats">Base Stats</string>
    <string name="reset">Reset</string>
    <string name="female">Female</string>
    <string name="values_between_5_and_614">Values between 5 and 614</string>
    <string name="values_between_1_and_362">Values Between 1 and 362</string>
    <string name="values_between_5_and_526">Values Between 5 and 526</string>
    <string name="values_between_0_1_and_820_0">Values Between 0.1 and 820.0</string>
    <string name="values_between_0_3_and_19_99">Values Between 0.3 and 19.99</string>
    <string name="characters_and_spaces">Characters and Spaces</string>
    <string name="_3_12_characters_spaces">3-12 Characters, Spaces, (.)</string>
    <string name="values_between_0_1010">Values Between 0-1010</string>
</resources>